--- a/css/style_css_a.css
+++ b/css/style_css_a.css
@@ -547,56 +547,50 @@ box-sizing: border-box;
     justify-content: space-around;
     position: absolute;
     width: 100%; 
-    margin-top: 7%;
 }
 
 .about1 {
+    position: relative;
+    top: -90px;
+    left: 45px;
     display: flex;
-    align-items: center;
-    height: 90px;
-
-}
-.about2 {
-    display: flex;
-    height: 90px;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-
+    align-items: flex-start;
+    height: auto;
 }
 .ikonki {
-    width: 90%;
+    position: relative;
+    left: 45px;
+    top: 75px;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     align-content: space-between;
 }
 .text_about {
+    position: relative;
+    top: 35px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding-left: 30px;
 }
-
-.text_about2 {
-    font-family: 'Ubuntu', sans-serif;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-color: white;
-
-}
-
-.about3 {
+.about2 {
+    position: relative;
+    left: 45px;
+    top: -20px;
     height: 90px;
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: normal;
-    line-height: 25px;
-    font-size: 18px;
+    line-height: 17px;
+    font-size: 12px;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.text_pad {
+    padding-top: 15px;
 }
 .about_footer {
     position: relative;
@@ -614,17 +608,19 @@ img.m {
     font-family: 'Puritan', sans-serif;
     font-style: normal;
 font-weight: normal;
-line-height: 64px;
-font-size: 48px;
+line-height: 24px;
+font-size: 18px;
 letter-spacing: 0.1em;
 color: white;
 }
 .logo_text_about2 {
+    position: relative;
+    top: 5px;
     font-family: 'Ubuntu', sans-serif;
 font-style: normal;
 font-weight: normal;
-line-height: 25px;
-font-size: 18px;
+line-height: 15px;
+font-size: 14px;
 color: white;
 }
 
@@ -668,8 +664,8 @@ color: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
-    top: 70px;
-    left: 370px;
+        top: 190px;
+    left: 160px;
 }
 
 .metka {
